<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">스마트안전건강지킴이</string>
    <string name="app_name_korean">스마트안전건강지킴이</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_height">성장발달</string>
    <string name="main_height_babel">신장 추천 운동</string>
    <string name="main_growth">종합건강점수</string>
    <string name="main_dining">식단/영양</string>
    <string name="main_pt">개인별맞춤운동</string>
    <string name="main_weight">체중변화</string>
    <string name="main_weight_babel">체중 추천 운동</string>
    <string name="main_muscle">근육량</string>
    <string name="main_ranking">건강랭킹</string>
    <string name="main_brain">두뇌발달분석</string>
    <string name="main_bmi">비만도</string>
    <string name="main_bmi_babel">체형 추천 운동</string>
    <string name="main_smoke">흡연지수</string>
    <string name="main_activity">나의활동량</string>
    <string name="main_magazine">건강매거진</string>
    <string name="main_map">안전\n지킴이</string>
    <string name="main_consult">모바일상담</string>
    <string name="main_noti">학교정보\n알리미</string>
    <string name="main_challenge">도전!!\n건강!!</string>

    <string name="drawer_notice">공지사항</string>
    <string name="drawer_qna">Q &amp; A</string>
    <string name="drawer_location_info_upload">지도 정보 등록</string>
    <string name="drawer_settings">설정</string>
    <string name="drawer_dev_info">정보</string>
    <string name="drawer_diet_menu">식단메뉴 등록</string>
    <string name="drawer_ask">서비스 문의</string>
    <string name="drawer_drop_out">서비스 탈퇴</string>

    <string name="drawer_setting_family_name">가족명 : </string>
    <string name="drawer_setting_in_out_alarm">등, 하교 알림</string>
    <string name="drawer_setting_activity_alarm">활동량 목표 달성 알림</string>
    <string name="drawer_setting_widget">SOS 위젯 표시</string>

    <string name="spinner_sex">성별</string>

    <string name="month_schedule">학사일정( %d월 )</string>
    <string name="meal_title">급식정보( %d월 )</string>
    <string name="popup_alert_nodata">통합서비스 신청시 이용 가능합니다.</string>
    <string name="popup_alert_vip_nodata">건강정보 측정기록이 없습니다.\n측정후 이용바랍니다.</string>
    <string name="title_activity_location_upload">LocationUploadActivity</string>
    <string name="category_prompt">카테고리를 선택하세요.</string>
    <string name="map_1">우범지역</string>
    <string name="map_2">아동안전지킴이집</string>
    <string name="map_3">파출소</string>
    <string name="map_4">성범죄위험지역</string>
    <string name="map_5">CCTV 설치장소</string>
    <string name="map_6">기타</string>

    <!-- 저체중 C, B, A -->
    <string name="obesity_risk_1">비만관련질환의 위험도는 낮은편으로 추정됩니다.</string>
    <string name="dietary_habits_1">단백질, 탄수화물, 지방이 고루 들어있는 식사를 정해진 시각에 규칙적으로 하는 것이 중요하며, 고 칼로리의 음식을 조금씩 늘리며 식단조절을 하는게 좋습니다.</string>
    <string name="recommend_exercise_1">유산소운동[걷기, 천천히 뛰기, 줄넘기 등]의 비율 30\u0025, 신체부위별 운동[상체, 하체, 복부, 전신 등] 70\u0025의 비율로 운동하는 것이 좋습니다. \n1일 운동량 : 유산소 운동 1일 18분이상 / 신체부위별 운동 42분 이상</string>

    <!-- 정상체중 A, B -->
    <string name="obesity_risk_2">비만관련질환의 위험도는 보통또는 낮은편으로 추정됩니다.</string>
    <string name="obesity_risk_3">비만관련질환의 위험도는 보통으로 추정됩니다.</string>
    <string name="dietary_habits_2_3">단백질, 탄수화물, 지방이 고루 들어있는 식사를 정해진 시각에 규칙적으로 하는 것이 중요하며 우유, 사골, 등푸른생선, 두부, 멸치 등 키크는데 도움을 주는 음식을 섭취하면 좋습니다. 음식 짜고, 맵고, 단음식, 야식, 커피, 탄산음료 등 피해야할 음식입니다.</string>
    <string name="recommend_exercise_2_3">유산소운동[걷기, 천천히 뛰기, 줄넘기 등]의 비율 50\u0025, 신체부위별 운동[상체, 하체, 복부, 전신 등] 50\u0025의 비율로 운동하는 것이 좋습니다. \n1일 운동량 : 유산소 운동 1일 30분이상 / 신체부위별 운동 30분 이상</string>

    <!-- 과체중 A, B -->
    <string name="obesity_risk_4">위험도는 조금 증가됨으로 추정됩니다.</string>
    <string name="dietary_habits_4">아침, 점심, 저녁을 거의 정해진 시간에 규칙적으로 먹습니다. 간식은 먹고 싶다면 가볍게 과일, 채소, 야채위주로 먹습니다. \n음식은 짜지 않고 싱겁게, 달지 않고 맹맹하게 먹는 습관을 기릅니다.</string>
    <string name="recommend_exercise_4">유산소운동[걷기, 천천히 뛰기, 줄넘기 등]의 비율 55\u0025, 신체부위별 운동[상체, 하체, 복부, 전신 등] 45\u0025의 비율로 운동하는 것이 좋습니다. \n1일 운동량 : 유산소 운동 1일 33분이상 / 신체부위별 운동 27분 이상</string>

    <!-- 경도비만 A, B, C -->
    <string name="obesity_risk_5">비만관련질환의 위험도 경도 위험으로 추정됩니다</string>
    <string name="dietary_habits_5">포화지방과 탄수화물이 많은 음식은 자제하고, 싱겁게 먹는 것이 좋습니다. 불포화지방산[등푸른생선, 땅콩류 등]을 섭취하는게 좋습니다. \n음식을 먹을땐 천천히 30회이상 씹어서 섭취합니다. 식사중의 물섭취는 피해서 하루에 1리터이상의 물을 먹습니다.</string>
    <string name="recommend_exercise_5">유산소운동[걷기, 천천히 뛰기, 줄넘기 등]의 비율 60\u0025, 신체부위별 운동[상체, 하체, 복부, 전신 등] 40\u0025의 비율로 운동하는 것이 좋습니다. \n1일 운동량 : 유산소 운동 1일 36분이상 / 신체부위별 운동 24분 이상</string>

    <!-- 중도비만 A, B, C / 고도비만 A(식습관)-->
    <string name="obesity_risk_6">비만관련질환의 위험도 중도 위험으로 추정됩니다</string>
    <string name="dietary_habits_6_7">끼니를 거르지는 말되, 소식을 하는 습관이 효과적입니다. 탄수화물의 섭취는 줄이고 채식위주의 식단과 단백질의 섭취량을 높여줍니다. \n비타민B영양소가 체지방감소에 효과적이므로 비타민B를 함유한 식품을 섭취합니다.[우유, 시금치, 버섯, 양배추, 등푸른생선 등]</string>
    <string name="recommend_exercise_6">유산소운동[걷기, 천천히 뛰기, 줄넘기 등]의 비율 70\u0025, 신체부위별 운동[상체, 하체, 복부, 전신 등] 30\u0025의 비율로 운동하는 것이 좋습니다. \n1일 운동량 : 유산소 운동 1일 42분이상 / 신체부위별 운동 18분 이상</string>

    <!-- 고도비만 A(식습관 제외), B, C -->
    <string name="obesity_risk_7">비만관련질환의 위험도 고도 위험으로 추정됩니다</string>
    <string name="dietary_habits_7">아침>점심>저녁의 비율로 먹도록하고 채식위주의 식단으로 조금씩 식사를하며 과식을 하지 않는 것이 효과적입니다. \n음식은 천천히 오래 씹도록하세요. 군것질이나 저녁에 먹는 야식은 피하시는게 좋습니다.</string>
    <string name="recommend_exercise_7">유산소운동[걷기, 천천히 뛰기, 줄넘기 등]의 비율 80\u0025, 신체부위별 운동[상체, 하체, 복부, 전신 등] 20\u0025의 비율로 운동하는 것이 좋습니다. \n1일 운동량 : 유산소 운동 1일 48분이상 / 신체부위별 운동 12분 이상</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
</resources>
