<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="#77000000"
        android:visibility="gone">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/map_1"
                android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:text="@string/map_1" android:textColor="#FFFFFFFF" />
            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/map_2"
                android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:text="@string/map_2" android:textColor="#FFFFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/map_3"
                android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:text="@string/map_3" android:textColor="#FFFFFFFF" />
            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/map_4"
                android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:text="@string/map_4" android:textColor="#FFFFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/map_5"
                android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:text="@string/map_5" android:textColor="#FFFFFFFF" />
            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/map_6"
                android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:text="@string/map_6" android:textColor="#FFFFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#77000000">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"
            android:text="위치서비스 이용관련 안내사항"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="1) 위치(GPS) 버튼을 반드시 활성화 해주세요.\n2) 위치 서비스는 외부에서 실행 시, 정확도가 더욱 높습니다.\n3) 핸드폰 기종에 따라 위치서비스의 정확도는 약간의 차이를 보일 수 있습니다."/>
    </LinearLayout>

</RelativeLayout>
