<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tv_menu_item"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:visibility="gone"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"/>
    <LinearLayout
        android:id="@+id/ll_sub_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="23dp"
        android:paddingRight="5dp"
        android:orientation="vertical"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_home_id"
                android:layout_width="0dp" android:layout_height="38dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/drawer_setting_family_name"/>
            <TextView
                android:id="@+id/tv_modify_family_name"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_alignParentRight="true" android:layout_marginRight="20dp"
                android:padding="3dp" android:background="@drawable/btn_back_gold_orange"
                android:textColor="@color/white" android:textStyle="bold"
                android:textSize="12sp"
                android:text="변경"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_in_out_alarm"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:text="@string/drawer_setting_in_out_alarm"/>
            <ToggleButton
                android:id="@+id/tg_in_out_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_activity_alarm"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:text="@string/drawer_setting_activity_alarm"/>
            <ToggleButton
                android:id="@+id/tg_activity_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_widget"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:text="@string/drawer_setting_widget"/>
            <ToggleButton
                android:id="@+id/tg_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
